--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   width: 1920px;
-  background-image: url('https://www.dropbox.com/s/3n092ama7531ccz/Senza%20titolo-1_Tavola%20disegno%201.jpg?dl=0');
+  background-image: url('markdown ![GitHub Logo](Senza titolo-1_Tavola disegno 1.jpg)');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
